# ibarrow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PYPI_SETUP.md  README.md  ROADMAP.md  env.example  publish_local.py  pyproject.toml  requirements-dev.txt  test_local.py
.github/: SECRETS.md  dependabot.yml  labels.yml  stale.yml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  conf.py  index.rst
docs/api/: README.md
docs/examples/: basic_usage.py  performance_benchmarks.py
src/: lib.rs
tests/: test_ibarrow.py
