[package]
name = "ibarrow"
version = "0.1.9"
edition = "2021"

[lib]
name = "ibarrow"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
pyo3 = { version = "0.26", features = ["extension-module"] }

arrow = { version = "56.1.0", features = ["ffi"] }
arrow-ipc = "56.1.0"
arrow-odbc = "20"
odbc-api = "19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-cpu=native"]

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-cpu=native"]